next
----
-celera_assembler_mer: new component use for hybrid assemblies. Designed for use in cloud (non shared) environments
-velvet_optimser: new component
-celera2hawkeye: new component
-celera_assembler_cloud: updated to fix bug where stderr was being written to a non-existant folder
-amoscmp: new component
-sfffile: new component
-nucmer: new component
-celera_assembler: added cloud variants to component
-uclust: new component
-metagene: moved dtdvalidation into an iterator to handle multiple bsml output produced by metagene.
-split_multifasta: added support for 'total_files' parameter that allows user to specify the exact amount of output files wanted
-translate_sequence: updated to make use of the Fasta::SimpleIndexer module for sequence lookups.
-sffinfo: new component
-p_func/parse_evidence: Database path is now configurable
-metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
-translate_sequence: added option to delete any fasta files generated by component that aren't gene/polypeptide sequences.
-tbl2asn: Reworked component so now it won't require a ITERATOR_LIST_FILE, and can be chained to the end of a bsml2tbl run
-ber: added project_abbreviation config variable so berbtab2bsml isn't dependent on specific assembly id patterns.
-augustus2bsml.pl: added 2.3.1 to version map
-glimmer3: added support for single input files
-prok_pipeline: replaced the single version of the prok pipeline with two new versions (one with database loading and one without)
-ncbi-blastall: new component
-mosaik: new component

ergatis-v2r12b1
----
-pipeline_summary: will use the second set of non-space chars in the input fasta file and set it to Sequence[@title]
-build_pipeline.cgi: will skip adding inputs unless they have a value.
-pipeline_summary: rewrite of pipeline_summary.pl (includes ordered locus assignment)
-p_func: included p_func.i1.xml to Makefile.PL