@@ -1,39 +1,29 @@
 [interface]
-classification = file / conversion
+classification = alignment
 
 [parameters]
-$;OUTPUT_PREFIX$; = 
-;; Any other command line options 
-$;OTHER_OPTS$; =
+;; output label 
+$;PROJECT_LABEL$; =
 
 [input]
-;; Format of input to the toAmos component
-;; Valid formats include:
-;;
-;;		1.) -a: asm
-;;		2.) -s: sequence (FASTA format)
-;;		3.) -q: qual 
-;;		4.) -ace: ACE format
-;;		5.) -f: celera-assembler frg file
-;;
-;; Multiple input formats may be specified by adding a space between
-;; each format i.e. -s human.fasta -q human.qual	
-$;INPUT_FILES$; =
+$;INPUT_FILE$; = 
+$;REFERENCE_GENOMES$; = 
 
 [output]
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;CROSSBOW_MANIFEST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.manifest
+$;SNPS_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.snps.list
 
 [component]
-$;COMPONENT_NAME$; = celera2hawkeye
-$;DESCRIPTION$; = none
+$;COMPONENT_NAME$; = crossbow
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
 ;The version,revision,tag here is set by an interpolated CVS tag
-$;VERSION$; = $Name$
+$;VERSION$; = 1.2
 $;RELEASE_TAG$; = $Name$
-$;REVISION$; = $Revision: 5801 $
+$;REVISION$; = $Revision: 4680 $
 
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
@@ -43,14 +33,13 @@ $;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
 $;GROUP_COUNT$; = 150
 $;NODISTRIB$; = 0
 
-;Skip these specific steps in the workflow
-$;SKIP_WF_COMMAND$;=
-
 ;the following keys are replaced at runtime by the invocation script
-$;COMPONENT_CONFIG$; =
-$;COMPONENT_XML$; =
-$;PIPELINE_XML$; =
-$;PIPELINEID$; =
+$;COMPONENT_CONFIG$; = 
+$;COMPONENT_XML$; = 
+$;PIPELINE_XML$; = 
+$;PIPELINEID$; = 
 
 [include]
 $;PROJECT_CONFIG$;=
+
+
